implemented redux, finished nave menu

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	justify-content: space-between;
 	z-index: 4;
-	transition: all 1s ease;
+	transition: all 1s ease-in-out;
 
 	h3 {
 		font-weight: 500;
@@ -13,10 +13,9 @@
 		justify-content: center;
 		align-items: center;
 
-		.settings-icon {
+		.profile-icon {
 			width: 30px;
 			height: 30px;
-			color: white;
 		}
 	}
 
@@ -33,17 +32,12 @@
 			height: 2px;
 			background: whitesmoke;
 			transform-origin: left;
-			transition: all 1s ease;
+			transition: all 1s ease-in-out;
 		}
 	}
 
 	.user-controls {
 		display: flex;
-
-		.home,
-		.logout {
-			color: whitesmoke;
-		}
 
 		.home {
 			margin-right: 5px;
@@ -56,7 +50,6 @@
 
 	&.active {
 		background: #6d41a1;
-		color: whitesmoke;
 
 		.hamburger {
 			span {
