--- a/src/components/NavMenu/navMenu.scss
+++ b/src/components/NavMenu/navMenu.scss
@@ -48,6 +48,16 @@
 		text-align: center;
 	}
 
+	.response-container {
+		display: flex;
+		align-items: center;
+		align-self: center;
+
+		.response-icon {
+			margin-right: 2.5px;
+		}
+	}
+
 	h6.link {
 		cursor: pointer;
 	}
