--- a/src/features/Main/components/Schedule/schedule.scss
+++ b/src/features/Main/components/Schedule/schedule.scss
@@ -2,9 +2,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 15px;
+	padding: 15px 0;
 }
 @media only screen and (min-width: 600px) {
+	.schedule {
+		padding: 15px;
+	}
 }
 @media only screen and (min-width: 700px) {
 	.schedule {
