--- a/src/features/Main/components/Memories/components/Carousel/carousel.scss
+++ b/src/features/Main/components/Memories/components/Carousel/carousel.scss
@@ -7,28 +7,38 @@
 	}
 
 	.pic-container {
-		width: 100%;
 		max-width: 500px;
 		height: 300px;
+		overflow: hidden;
 		position: relative;
 
-		img {
-			width: 100%;
+		.pic-wrapper {
+			position: relative;
 			height: 100%;
-			object-fit: fill;
-		}
+			width: fit-content;
+			overflow: hidden;
+			margin: 0 auto;
 
-		.overlay {
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			bottom: 0;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-			padding: 10px;
-			background-color: rgba(0, 0, 0, 0.4);
-			color: whitesmoke;
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: fill;
+				display: block;
+			}
+
+			.overlay {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				padding: 10px;
+				background-color: rgba(0, 0, 0, 0.4);
+				color: whitesmoke;
+			}
 		}
 	}
 }
