working on footer

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -15,7 +15,7 @@
 		flex-direction: column;
 
 		.icon {
-			margin-right: 10px;
+			margin-right: 5px;
 		}
 	}
 
@@ -71,8 +71,7 @@
 		.divider {
 			border-bottom: 2px solid #fef6e4;
 			width: 60%;
-			margin-top: 10px;
-			margin-bottom: 20px;
+			margin: 10px 0;
 			align-self: flex-start;
 		}
 	}
