--- a/src/features/Main/components/Hero/hero.scss
+++ b/src/features/Main/components/Hero/hero.scss
@@ -1,4 +1,4 @@
-.hero {
+#hero {
 	width: 100vw;
 	height: calc(100vh / 3);
 	display: flex;
@@ -49,7 +49,7 @@
 @media only screen and (min-width: 600px) {
 }
 @media only screen and (min-width: 900px) {
-	.hero {
+	#hero {
 		video {
 			object-fit: fill;
 		}
