got rid of borders on profile view

--- a/src/features/Profile/components/Events/events.scss
+++ b/src/features/Profile/components/Events/events.scss
@@ -7,7 +7,7 @@
 	position: relative;
 	padding: 20px;
 	margin: 10px 0;
-	border: 3px ridge rgb(110, 20, 220);
+	// border: 3px ridge rgb(110, 20, 220);
 
 	.header {
 		width: 100%;
