--- a/src/features/Profile/components/Friends/friends.scss
+++ b/src/features/Profile/components/Friends/friends.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	padding: 20px;
 	margin: 10px 0;
-	border: 3px ridge crimson;
+	// border: 3px ridge crimson;
 
 	.box {
 		height: fit-content;
