--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -4,9 +4,9 @@
 	border-radius: 30px;
 	border: none;
 	color: whitesmoke;
-	background-color: indigo;
+	background: #7d67cb;
 
 	&:hover {
-		background-color: green;
+		background: #86ba90;
 	}
 }
