--- a/src/features/Main/components/Memories/memories.scss
+++ b/src/features/Main/components/Memories/memories.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	background-color: peachpuff;
+	background: #f7ede2; // peachpuff
 	padding: 20px;
 	text-align: center;
 
