--- a/src/features/Main/components/UpNext/upNext.scss
+++ b/src/features/Main/components/UpNext/upNext.scss
@@ -4,7 +4,8 @@
 	align-items: center;
 	padding: 20px;
 	text-align: center;
-	background-color: firebrick;
+	background: #84a59d; // firebrick
+	// background: #f28482;
 
 	h2 {
 		font-size: 1rem;
