--- a/src/features/Main/components/Hero/hero.scss
+++ b/src/features/Main/components/Hero/hero.scss
@@ -6,18 +6,51 @@
 	align-items: center;
 	position: relative;
 	overflow: hidden;
-	background: #ff5f6d; /* fallback for old browsers */
-	background: -webkit-linear-gradient(
-		to right,
-		#ffc371,
-		#ff5f6d
-	); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(
-		to right,
-		#ffc371,
-		#ff5f6d
-	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	// // font-weight: bold;
+	// background: hsla(165, 15%, 58%, 1);
+	// background: radial-gradient(
+	// 	circle,
+	// 	hsla(165, 15%, 58%, 1) 0%,
+	// 	hsla(31, 57%, 93%, 1) 50%,
+	// 	hsla(206, 46%, 37%, 1) 100%
+	// );
+	// background: -moz-radial-gradient(
+	// 	circle,
+	// 	hsla(165, 15%, 58%, 1) 0%,
+	// 	hsla(31, 57%, 93%, 1) 50%,
+	// 	hsla(206, 46%, 37%, 1) 100%
+	// );
+	// background: -webkit-radial-gradient(
+	// 	circle,
+	// 	hsla(165, 15%, 58%, 1) 0%,
+	// 	hsla(31, 57%, 93%, 1) 50%,
+	// 	hsla(206, 46%, 37%, 1) 100%
+	// );
+	// filter: progid(
+	// 	'DXImageTransform.Microsoft.gradient( startColorstr="#84A59D", endColorstr="#F7EDE2", GradientType=1 )'
+	// );
+
+	background: hsla(31, 57%, 93%, 1);
+	background: radial-gradient(
+		circle,
+		hsla(31, 57%, 93%, 1) 0%,
+		hsla(165, 15%, 58%, 1) 50%,
+		hsla(206, 46%, 37%, 1) 100%
+	);
+	background: -moz-radial-gradient(
+		circle,
+		hsla(31, 57%, 93%, 1) 0%,
+		hsla(165, 15%, 58%, 1) 50%,
+		hsla(206, 46%, 37%, 1) 100%
+	);
+	background: -webkit-radial-gradient(
+		circle,
+		hsla(31, 57%, 93%, 1) 0%,
+		hsla(165, 15%, 58%, 1) 50%,
+		hsla(206, 46%, 37%, 1) 100%
+	);
+	filter: progid(
+		'DXImageTransform.Microsoft.gradient( startColorstr="#F7EDE2", endColorstr="#84A59D", GradientType=1 )'
+	);
 
 	video {
 		width: 100%;
