reworking the profile screen

--- a/src/features/Profile/components/User/user.scss
+++ b/src/features/Profile/components/User/user.scss
@@ -1,138 +1,111 @@
-.user {
-	width: 100vw;
-	height: fit-content;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	position: relative;
-	// border: 2px ridge red;
+#user {
+	margin-bottom: 20px;
 
-	#update {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		background-color: green;
-		color: whitesmoke;
-		padding: 7px;
-		border: none;
-		border-radius: 15px;
-	}
-
-	.pic-box {
-		width: 175px;
-		height: 175px;
-		position: relative;
+	.cover-photo-section {
+		height: 180px;
 		display: flex;
 		justify-content: center;
-		align-items: center;
-		margin-bottom: 10px;
-		// border: 1px ridge green;
+		background-color: orange;
+		position: relative;
 
-		.no-pic,
-		.profile-pic {
-			width: 125px;
-			height: 125px;
+		.cover-photo-container {
+			width: 100%;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: center;
+			}
+
+			.cover-photo-btn {
+				width: inherit;
+				height: 180px;
+				display: none;
+				position: absolute;
+				left: 0;
+				bottom: 0;
+
+				.btn-icon {
+					font-size: 50px;
+					color: rgba(0, 0, 0, 0.6);
+				}
+			}
+
+			&:hover .cover-photo-btn {
+				display: block;
+			}
 		}
 
-		.profile-pic {
-			border-radius: 50%;
-		}
-
-		.pic-add {
+		.user-image-container {
+			width: 132px;
+			height: 132px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-left: var(--spacing);
 			position: absolute;
-			bottom: 0;
-			right: 0;
-			color: green;
+			left: 0;
+			bottom: -66px;
+
+			img {
+				width: 100%;
+				height: 100%;
+				border-radius: 50%;
+				border: 4px solid white;
+				background-color: grey;
+				object-fit: cover;
+				object-position: center;
+			}
+
+			.profile-pic-btn {
+				position: absolute;
+				width: inherit;
+				height: inherit;
+				display: none;
+
+				.btn-icon {
+					font-size: 50px;
+					color: rgba(0, 0, 0, 0.6);
+				}
+			}
+
+			&:hover .profile-pic-btn {
+				display: block;
+			}
 		}
 	}
 
-	.info-box {
-		width: 95%;
+	.user-details-container {
 		display: flex;
-		justify-content: space-around;
-		padding: 5px;
-		// border: 1px ridge indigo;
+		flex-direction: column;
+		align-items: self-start;
+		padding: 0 var(--spacing);
+		margin-top: 70px;
 
-		label,
-		// input,
-		.MuiFormControlLabel-label {
-			font-size: 13px;
-		}
+		// .followers-container {
+		// 	a {
+		// 		color: var(--border);
+		// 		margin-right: 15px;
+		// 		text-decoration: none;
+		// 	}
 
-		input {
-			font-size: 11px;
-		}
+		// 	.value {
+		// 		font-weight: bold;
+		// 		margin-right: 5px;
+		// 		color: var(--paragraph);
+		// 	}
+		// }
 	}
 }
 
 @media only screen and (min-width: 500px) {
-	.user {
-		height: calc(100vh / 3);
-		flex-direction: row;
-		align-items: center;
-
-		.pic-box {
-			margin-bottom: 0;
-			margin-right: 10px;
-			margin-left: 10px;
-		}
-
-		.info-box {
-			margin-right: 10px;
-		}
-	}
 }
 @media only screen and (min-width: 600px) {
-	.user {
-		.pic-box {
-			width: 250px;
-			height: 100%;
-
-			.no-pic,
-			.profile-pic {
-				width: 225px;
-				height: 225px;
-			}
-		}
-	}
 }
 @media only screen and (min-width: 900px) {
-	.user {
-		.pic-box {
-			width: 300px;
-
-			.no-pic,
-			.profile-pic {
-				width: 275px;
-				height: 275px;
-			}
-		}
-	}
 }
 @media only screen and (min-width: 1200px) {
-	.user {
-		.pic-box {
-			width: 450px;
-
-			.no-pic,
-			.profile-pic {
-				width: 300px;
-				height: 300px;
-			}
-		}
-	}
 }
 @media only screen and (min-width: 1536px) {
-	.user {
-		.pic-box {
-			width: 600px;
-
-			.no-pic,
-			.profile-pic {
-				width: 400px;
-				height: inherit;
-			}
-		}
-	}
 }
