--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+:root {
+	--brand: rgb(51, 100, 138);
+	--brand-shadow: rgba(51, 100, 138, 0.2);
+	--border: #72757e;
+	--heading: #fffffe;
+	--spacing: 15px;
+}
+
 * {
 	margin: 0;
 	padding: 0;
