--- a/src/features/Main/components/Schedule/components/Calendar/components/EventModal/eventModal.scss
+++ b/src/features/Main/components/Schedule/components/Calendar/components/EventModal/eventModal.scss
@@ -66,7 +66,7 @@
 		.no-user {
 			width: 100%;
 			display: flex;
-			align-items: end;
+			align-items: flex-end;
 			border-bottom: 1px dotted rgba(0, 0, 0, 0.42);
 
 			.icon-container {
