--- a/src/features/Profile/profile.scss
+++ b/src/features/Profile/profile.scss
@@ -4,19 +4,26 @@
 	margin-top: 57px;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	position: relative;
-	// border: 2px solid firebrick;
 
-	.greeting-container {
-		position: absolute;
-		top: 15px;
-		left: 15px;
-		z-index: 5;
-		background-color: rgba(0, 0, 0, 0.8);
-		color: whitesmoke;
-		padding: 10px;
-		border-radius: 10px;
+	#profile-container {
+		width: 100vw;
+		max-width: 1440px;
+		align-self: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		position: relative;
+
+		.greeting-container {
+			position: absolute;
+			top: 15px;
+			left: 15px;
+			z-index: 5;
+			background-color: rgba(0, 0, 0, 0.8);
+			color: whitesmoke;
+			padding: 10px;
+			border-radius: 10px;
+		}
 	}
 }
 
