--- a/src/features/Main/components/Schedule/components/Calendar/components/Day/day.scss
+++ b/src/features/Main/components/Schedule/components/Calendar/components/Day/day.scss
@@ -16,8 +16,8 @@
 	}
 
 	.cell {
-		height: 54px;
-		width: 54px;
+		width: 40px;
+		height: 40px;
 
 		header {
 			margin-top: 5px;
@@ -72,4 +72,34 @@
 			}
 		}
 	}
+}
+@media only screen and (min-width: 350px) {
+	.day-container {
+		.cell {
+			width: 48px;
+			height: 48px;
+		}
+	}
+}
+@media only screen and (min-width: 400px) {
+	.day-container {
+		.cell {
+			width: 50px;
+			height: 50px;
+		}
+	}
+}
+@media only screen and (min-width: 500px) {
+	.day-container {
+		.cell {
+			width: 54px;
+			height: 54px;
+		}
+	}
+}
+@media only screen and (min-width: 900px) {
+}
+@media only screen and (min-width: 1200px) {
+}
+@media only screen and (min-width: 1536px) {
 }
