--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,13 @@
 	--brand-shadow: rgba(51, 100, 138, 0.2);
 	--border: #72757e;
 	--heading: #fffffe;
+	--paragraph: #94a1b2;
+	--highlight: #2cb67d;
+	--highlight-shadow: rgba(44, 182, 125, 0.2);
+	--muted: rgba(255, 255, 255, 0.34);
+	--muted-shadow: rgba(255, 255, 255, 0.06);
+	--reply: #4fc4cf;
+	--reply-shadow: rgba(79, 196, 207, 0.2);
 	--spacing: 15px;
 }
 
