--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
 :root {
 	--brand: rgb(51, 100, 138);
 	--brand-shadow: rgba(51, 100, 138, 0.2);
+	--brand-alt: #7d67cb;
+	--brand-alt-shadow: rgba(125, 103, 203, 0.2);
 	--border: #72757e;
-	--heading: #fffffe;
+	--heading: whitesmoke;
 	--paragraph: #94a1b2;
 	--highlight: #2cb67d;
 	--highlight-shadow: rgba(44, 182, 125, 0.2);
