--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,12 +1,12 @@
-.btn {
-	margin: 10px 0;
-	padding: 8px;
-	border-radius: 30px;
-	border: none;
-	color: whitesmoke;
-	background: #7d67cb;
+// .btn {
+// 	margin: 10px 0;
+// 	padding: 8px;
+// 	border-radius: 30px;
+// 	border: none;
+// 	color: whitesmoke;
+// 	background: #7d67cb;
 
-	&:hover {
-		background: #86ba90;
-	}
-}
+// 	&:hover {
+// 		background: #86ba90;
+// 	}
+// }
