--- a/src/features/Main/components/Schedule/schedule.scss
+++ b/src/features/Main/components/Schedule/schedule.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 15px 0;
+	background-color: var(--background-primary);
 }
 @media only screen and (min-width: 600px) {
 	.schedule {
