--- a/src/features/Main/components/Welcome/welcome.scss
+++ b/src/features/Main/components/Welcome/welcome.scss
@@ -2,6 +2,9 @@
 	position: relative;
 	height: calc(100vh / 2);
 	max-height: 400px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
 	img {
 		position: absolute;
@@ -13,36 +16,20 @@
 	}
 
 	.message {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		position: absolute;
-		top: 0%;
-		bottom: 0%;
-		left: 0px;
+		width: fit-content;
 		font-family: 'Rubik Bubbles';
-		font-size: 3rem;
 		background: linear-gradient(
 			to left,
-			rgba(0, 0, 0, 0.1),
-			rgba(0, 0, 0, 0.3)
+			rgba(0, 0, 0, 0.2),
+			rgba(0, 0, 0, 0.4)
 		);
+		margin: auto;
+		padding: 0 10px;
+		border-radius: 7px;
+		z-index: 5;
 
-		span {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
+		h2 {
 			color: var(--heading);
-			margin: 0 10px;
-		}
-	}
-}
-
-@media only screen and (min-width: 400px) {
-	#welcome {
-		.message {
-			font-size: 3.5rem;
 		}
 	}
 }
@@ -50,53 +37,8 @@
 @media only screen and (min-width: 600px) {
 	#welcome {
 		.message {
-			font-size: 2.5rem;
-			flex-direction: row;
-			top: 40%;
-			bottom: 40%;
-			border-radius: 7px;
-		}
-	}
-}
-
-@media only screen and (min-width: 800px) {
-	#welcome {
-		.message {
-			font-size: 3.5rem;
-		}
-	}
-}
-
-@media only screen and (min-width: 1000px) {
-	#welcome {
-		.message {
-			font-size: 4.5rem;
-		}
-	}
-}
-
-@media only screen and (min-width: 1200px) {
-	#welcome {
-		.message {
-			left: 5%;
-		}
-	}
-}
-
-@media only screen and (min-width: 1500px) {
-	#welcome {
-		.message {
-			left: 0;
-			font-size: 6rem;
-			background: none;
-		}
-	}
-}
-
-@media only screen and (min-width: 2000px) {
-	#welcome {
-		.message {
-			left: 15%;
+			margin: 0;
+			margin-left: 3%;
 		}
 	}
 }
